--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -15,44 +15,42 @@ on:
 
 jobs:
   build:
-    runs-on: actuated
+    runs-on: ubuntu-latest
 
     steps:
     # defaults to shallow checkout
     - uses: actions/checkout@v2
 
-    - name: Setup mirror
-      uses: self-actuated/hub-mirror@master
-
-    - name: Get TAG
-      id: get_tag
-      run: echo TAG=${GITHUB_REF#refs/tags/} >> $GITHUB_ENV
-
     - name: Print values of all environment variables
       run: printenv
-    
-    - name: Set up QEMU
-      uses: docker/setup-qemu-action@v2
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
     
     - name: Login to DockerHub Registry
       run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
     
-    - name: Release build
-      id: release_build
-      uses: docker/build-push-action@v4
-      with:
-        outputs: "type=registry,push=true"
-        provenance: false
-        platforms: linux/amd64,linux/arm64
-        build-args: |
-          Version=${{  env.TAG }}
-          GitCommit=${{ github.sha }}
-        tags: |
-          ${NAME}/${IMAGE}:${{ github.sha }}
-          ${NAME}/${IMAGE}:${{ env.TAG }}
-          ${NAME}/${IMAGE}:latest
+    - name: Build the tagged Docker image
+      run: docker build . --file ./Dockerfile --tag ${NAME}/${IMAGE}:latest
+      
+    - name: Unshallow repository
+      run: git fetch --prune --unshallow 2> /dev/null || true
 
+    - name: Tag master branch and push to repository
+      if: ${{ startsWith(github.ref, 'refs/heads/master') }}
+      run: |
+        
+        # Push image
+        docker push ${NAME}/${IMAGE}
+    
+    - name: Tag latest release and push to repository
+      if: ${{ github.event_name == 'release' }}
+      run: |
+        
+        # Get latest release tag
+        tag=$(git describe --tags --abbrev=0 | sed s/^v//)
+        
+        # Tag image
+        docker tag ${NAME}/${IMAGE}:latest ${NAME}/${IMAGE}:${tag}
+
+        # Push release
+        docker push ${NAME}/${IMAGE}:${tag}
+    
       
