--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -21,15 +21,26 @@ jobs:
     # defaults to shallow checkout
     - uses: actions/checkout@v2
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Print values of all environment variables
       run: printenv
     
     - name: Login to DockerHub Registry
       run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
     
-    - name: Build the tagged Docker image
-      run: docker build . --file ./Dockerfile --tag ${NAME}/${IMAGE}:latest
-      
+    - name: Build and Push Image
+      uses: docker/build-push-action@v3
+      with:
+        tags: ${NAME}/${IMAGE}:latest
+        platforms: linux/amd64,linux/arm64
+        file: ./Dockerfile
+        push: false
+   
     - name: Unshallow repository
       run: git fetch --prune --unshallow 2> /dev/null || true
 
