--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Build and Push Image
       uses: docker/build-push-action@v3
       with:
-        tags: ${NAME}/${IMAGE}:latest
+        tags: ${{ NAME }}/${{ IMAGE }}:latest
         platforms: linux/amd64,linux/arm64
         file: ./Dockerfile
         push: false
