Try multiple build with manifest creation

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,4 +1,4 @@
-FROM ubuntu:jammy
+FROM ubuntu:mantic
 LABEL maintainer="jerome.gasperi@gmail.com"
 
 # Add wait-for-it
@@ -6,12 +6,12 @@ ADD https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.s
 RUN chmod +x /bin/wait-for-it.sh
 
 # Add S6 supervisor (for graceful stop)
-ADD https://github.com/just-containers/s6-overlay/releases/download/v3.1.2.1/s6-overlay-noarch.tar.xz /tmp
-ADD https://github.com/just-containers/s6-overlay/releases/download/v3.1.2.1/s6-overlay-x86_64.tar.xz /tmp
+ADD https://github.com/just-containers/s6-overlay/releases/download/v3.1.6.2/s6-overlay-noarch.tar.xz /tmp
+ADD https://github.com/just-containers/s6-overlay/releases/download/v3.1.6.2/s6-overlay-aarch64.tar.xz /tmp
 
 RUN apt-get update -y && \
 	apt-get install xz-utils -y && \
 	tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz && \
-	tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz && \
+	tar -C / -Jxpf /tmp/s6-overlay-aarch64.tar.xz && \
 	rm -rf /tmp/*
 ENTRYPOINT ["/init"]
