--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -36,7 +36,10 @@ jobs:
     - name: Build and Push Image
       if: ${{ startsWith(github.ref, 'refs/heads/master') }}
       run: |
-        docker buildx build --push --platform linux/amd64,linux/arm64 --tag ${NAME}/${IMAGE}:latest --file ./Dockerfile .
+
+        docker buildx build --push --platform linux/amd64 --tag ${NAME}/${IMAGE}:latest_amd64 --file ./Dockerfile.amd64 .
+        docker buildx build --push --platform linux/arm64 --tag ${NAME}/${IMAGE}:latest_arm64 --file ./Dockerfile.arm64 .
+        docker manifest create ${NAME}/${IMAGE}:latest ${NAME}/${IMAGE}:latest_arm64 ${NAME}/${IMAGE}:latest_amd64
     
     - name: Tag latest release and push to repository
       if: ${{ github.event_name == 'release' }}
